--- a/packages/module_1/package.json
+++ b/packages/module_1/package.json
@@ -11,5 +11,6 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "gitHead": "98e4d440cf323068dda397ba4a06d98036c88403"
 }
