--- a/packages/module_1/package.json
+++ b/packages/module_1/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "lodash": "4.17.19"
+    "lodash": "4.17.19",
+    "module_2": "1.0.0"
   },
   "keywords": [],
   "author": "",
