--- a/packages/module_1/package.json
+++ b/packages/module_1/package.json
@@ -1,6 +1,6 @@
 {
   "name": "module_1",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "lodash": "4.17.19",
-    "module_2": "1.0.0"
+    "module_2": "^0.0.3"
   },
   "keywords": [],
   "author": "",
