--- a/packages/module_2/package.json
+++ b/packages/module_2/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "dependencies": {
+    "module_3": "1.0.0"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC"
